src/objects/MiscellaneousBaseSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>to hold various settings used by Groundwire&apos;s base package.</description>
    <fields>
        <fullName>Campaign_Member_Status_Donated__c</fullName>
        <defaultValue>&quot;Donated&quot;</defaultValue>
        <description>The Campaign Member Status value to use when our Opportunity trigger adds a contact to a campaign based off a donation.</description>
        <inlineHelpText>The Campaign Member Status value to use when our Opportunity trigger adds a contact to a campaign based off a donation.</inlineHelpText>
        <label>Campaign Member Status Donated</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Mailing_List_Report_ID__c</fullName>
        <inlineHelpText>Salesforce ID of a report that displays campaign member names and mailing addresses to be used for direct mail. The household deduplication Visualforce page uses this setting to provide a link to the report in each campaign record.</inlineHelpText>
        <label>Household Mailing List Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Account_Id__c</fullName>
        <inlineHelpText>To increase code efficiency, set this to the ID of the &quot;Individual&quot; bucket account.</inlineHelpText>
        <label>Individual Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Account_Name__c</fullName>
        <defaultValue>&quot;Individual&quot;</defaultValue>
        <description>The name of the special individual bucket account.</description>
        <inlineHelpText>The name of the special individual bucket account.</inlineHelpText>
        <label>Individual Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Change_Wizard_Relationship__c</fullName>
        <defaultValue>&quot;Employee&quot;</defaultValue>
        <inlineHelpText>The relationship to specify with the previous employer.</inlineHelpText>
        <label>Job Change Wizard Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Converter_Account_Name_Not_Provided__c</fullName>
        <defaultValue>&quot;[not provided]&quot;</defaultValue>
        <description>The text leads can have for their account, when it isn&apos;t provided by the user. These will be mapped to the Individual bucket account.</description>
        <inlineHelpText>The text leads can have for their account, when it isn&apos;t provided by the user. These will be mapped to the Individual bucket account.</inlineHelpText>
        <label>Lead Converter Account Name Not Provided</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Miscellaneous Base Settings</label>
</CustomObject>